rebirth-responsive: z-index and position fix

--- a/src/modules/app/less/app.less
+++ b/src/modules/app/less/app.less
@@ -439,7 +439,7 @@ div.help-content {
 .icon-information {
   position: absolute;
   right: 141px;
-  top: 42px;
+  top: 43px;
 }
 
 .icon-information-tooltip {
